# wallet-android

android-linking/: settings.gradle
android-linking/app/: build.gradle
android-linking/app/src/androidTest/java/com/example/applinking/: ExampleInstrumentedTest.java
android-linking/app/src/main/: AndroidManifest.xml
android-linking/app/src/main/cpp/: CMakeLists.txt  combined.cpp
android-linking/app/src/main/java/com/example/applinking/: MainActivity.java
android-linking/app/src/main/res/layout/: content_main.xml
android-linking/app/src/main/res/menu/: menu_main.xml
android-linking/app/src/main/res/values/: strings.xml
android-linking/app/src/test/java/com/example/applinking/: ExampleUnitTest.java
android-linking/gradle/wrapper/: gradle-wrapper.properties
app/src/main/res/layout/: activity_home.xml  home_balance_digit.xml  home_balance_digit_thousands_separator.xml  home_tx_list_item.xml
